fixtures/specs/snapshots/muse_spec__tests__error-recipe-recursion.snap
---
source: crates/muse-spec/src/lib.rs
expression: result
---
ERROR
RecipeRecursion at programs.generate.nodes.entry.again.use: recursive recipe inclusion loop
