fixtures/specs/snapshots/muse_spec__tests__error-type-mismatch.snap
---
source: crates/muse-spec/src/lib.rs
expression: result
---
ERROR
TypeMismatch at programs.generate.nodes.bad.args.velocity: expected VectorField, got ScalarField from $node.source.value
