fixtures/specs/snapshots/muse_spec__tests__error-unknown-arg.snap
---
source: crates/muse-spec/src/lib.rs
expression: result
---
ERROR
UnknownArgument at programs.generate.nodes.value.args.unexpected: unknown argument for laplacian
