fixtures/specs/snapshots/muse_spec__tests__error-unknown-op.snap
---
source: crates/muse-spec/src/lib.rs
expression: result
---
ERROR
UnknownOperator at programs.generate.nodes.bad.op: unknown operator not_an_operator
