fixtures/specs/snapshots/muse_spec__tests__error-unknown-parameter.snap
---
source: crates/muse-spec/src/lib.rs
expression: result
---
ERROR
UnknownParameter at programs.generate.nodes.calculate.params.factor: unknown parameter missing
