fixtures/specs/snapshots/muse_spec__tests__error-unknown-ref.snap
---
source: crates/muse-spec/src/lib.rs
expression: result
---
ERROR
UnknownReference at programs.generate.nodes.first.args.field: unknown node output $node.missing.value
