fixtures/specs/snapshots/muse_spec__tests__valid-pointwise.snap
---
source: crates/muse-spec/src/lib.rs
expression: result
---
OK
Program {
    nodes: [
        CompiledNode {
            id: "transform",
            op: "pointwise",
            args: {
                "scale": Parameter(
                    "multiplier",
                ),
                "x": Input(
                    "source",
                ),
            },
            cel: [
                CompiledExpressionHandle(
                    "x * scale",
                ),
            ],
        },
    ],
    updates: [],
}
