fixtures/specs/snapshots/muse_spec__tests__valid-recipe-inclusion.snap
---
source: crates/muse-spec/src/lib.rs
expression: result
---
OK
Program {
    nodes: [
        CompiledNode {
            id: "first.filtered",
            op: "laplacian",
            args: {
                "field": Input(
                    "incoming",
                ),
            },
            cel: [],
        },
        CompiledNode {
            id: "second.filtered",
            op: "laplacian",
            args: {
                "field": NodeOutput {
                    node: "first.filtered",
                    output: "value",
                },
            },
            cel: [],
        },
    ],
    updates: [],
}
